# gambling-back

./: README.md  pyproject.toml
config/: db.py
gambling/: main.py
models/: global_models.py  usuario.py
prolog/: evento_ruleta.py
routes/: admin.py  usuario.py
schemas/: admin.py  usuario.py
