[tool.poetry]
name = "gambling-back"
version = "0.1.0"
description = ""
authors = ["Donakeru <dachavezbustos@gmail.com>"]
readme = "README.md"
packages = [{include = "gambling"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.7"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.37"
pymysql = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
